# tracking_with_velo

./: CMakeLists.txt  README.md  Untitled Diagram.drawio
include/: lifeManager.h  trackData.h  tracker.h  utils.h
src/: kalman_filter.cpp  lifeManager.cpp  trackData.cpp  tracker.cpp  utils.cpp
test/: test_eigen.cpp  test_kf.cpp  test_lifeManager.cpp  test_trackData.cpp  test_tracker.cpp
